--- a/src/style.css
+++ b/src/style.css
@@ -66,9 +66,19 @@ nav
     height: 100%;
     background: linear-gradient(0deg, #0064a7,#01feff );
     background-size: 300% 100%;
-    animation: progress-animation 1.5s linear;
     word-wrap: normal;
 }
+
+.progress-bar.anim
+{
+    position: absolute;
+    height: 100%;
+    background: linear-gradient(0deg, #0064a7,#01feff );
+    background-size: 300% 100%;
+    word-wrap: normal;
+    animation: progress-animation 1.5s linear;
+}
+
 .content
 {
     position: absolute;
@@ -78,8 +88,6 @@ nav
     align-items: center;
     justify-content: space-between;
     padding: 0 3%;
-
-
 }
 span {display: block;}
 
